--- a/ESP8266/platformio.ini
+++ b/ESP8266/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:esp8266]
 platform = espressif8266@4.1.0
-board = d1_mini
+board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
 
