--- a/ESP8266/platformio.ini
+++ b/ESP8266/platformio.ini
@@ -12,7 +12,8 @@
 platform = espressif8266@4.1.0
 board = nodemcuv2
 framework = arduino
-monitor_speed = 115200
+monitor_speed = 9600
+upload_speed = 115200
 
 lib_deps =
     Blynk=https://github.com/blynkkk/blynk-library/archive/refs/heads/master.zip
